fix gap

--- a/src/styles/components/ChallengeBox.module.css
+++ b/src/styles/components/ChallengeBox.module.css
@@ -110,9 +110,3 @@
 .challengeActive footer button:hover {
   filter: brightness(0.9);
 }
-
-@media(max-width: 720px) {
-  .challengeBoxContainer {
-    height: 95%;
-  }
-}
