--- a/src/styles/pages/Home.module.css
+++ b/src/styles/pages/Home.module.css
@@ -22,5 +22,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+
+    gap: 2.25rem;
   }
 }
